gwas/docs/2026.01.06/birth_weight/pop_mothers_pheno_weight_birth.md
## weight_birth in mothers
Association results by regenie for weight_birth in mothers, followed by simple pruning of the hits passing p < 5e-08.
Note:
- Markers with a maf < 0.01 are not annotated on the Manhattan plot.
- Markers in the HLA region are not annotated on the Manhattan plot.
### Manhattan
![](figures/pop_mothers_pheno_weight_birth_mh.png)
### Top hits common
| SNP | chr | bp | allele 0 | allele 1 | allele 1 freq | beta | se | log10p | n | gene |
| --- | --- | -- | -------- | -------- | ------------- | ---- | -- | ------ | - | ---- |
| rs11685757 | 2 | 235806512 | A | G | 0.148505 | 0.0371611 | 0.00729377 | 6.4573 | 58314 | [SH3BP4](ensembl/rs11685757.md) |
| rs900400 | 3 | 156798775 | T | C | 0.404775 | -0.0377801 | 0.00525787 | 12.174 | 58314 | [LEKR1](ensembl/rs900400.md) |
| rs13065423 | 3 | 12274592 | G | A | 0.0723887 | -0.0526739 | 0.00997891 | 6.8853 | 58314 | [PPARG](ensembl/rs13065423.md) |
| rs62289922 | 3 | 194755810 | T | G | 0.262986 | 0.0340684 | 0.00655123 | 6.70122 | 58314 | [XXYLT1](ensembl/rs62289922.md) |
| rs9820366 | 3 | 62861433 | A | G | 0.045799 | 0.0618325 | 0.0123418 | 6.26418 | 58314 | [CADPS](ensembl/rs9820366.md) |
| rs12643424 | 4 | 38514427 | A | G | 0.0119322 | 0.134624 | 0.0227535 | 8.4833 | 58314 | [RP11-617D20.1](ensembl/rs12643424.md) |
| rs75170589 | 4 | 129619501 | G | T | 0.010254 | 0.136606 | 0.0252144 | 7.21934 | 58314 | [JADE1](ensembl/rs75170589.md) |
| rs12498160 | 4 | 25169946 | G | A | 0.571707 | -0.0278 | 0.00523201 | 6.96832 | 58314 | [PI4K2B](ensembl/rs12498160.md) |
| rs58908116 | 4 | 16551629 | T | C | 0.0508434 | 0.0613996 | 0.01165 | 6.86592 | 58314 | [LDB2](ensembl/rs58908116.md) |
| rs3020342 | 6 | 152047753 | A | G | 0.291252 | -0.0386442 | 0.00577736 | 10.6481 | 58314 | [ESR1](ensembl/rs3020342.md) |
| rs2321443 | 6 | 79204960 | T | C | 0.352276 | 0.0294524 | 0.00556439 | 6.91969 | 58314 | No gene found |
| rs741037 | 7 | 44232833 | G | A | 0.151474 | 0.0473265 | 0.00720647 | 10.2902 | 58314 | [GCK](ensembl/rs741037.md) |
| rs76343360 | 7 | 26504924 | C | T | 0.0121592 | 0.135432 | 0.02408 | 7.72976 | 58314 | [KIAA0087](ensembl/rs76343360.md) |
| rs117243161 | 7 | 125587929 | C | T | 0.0367005 | -0.0742297 | 0.0142904 | 6.6874 | 58314 | No gene found |
| rs1574285 | 9 | 4283137 | G | T | 0.566223 | -0.0326033 | 0.00523322 | 9.3314 | 58314 | [GLIS3](ensembl/rs1574285.md) |
| rs111526775 | 9 | 26678042 | A | G | 0.0111048 | 0.130818 | 0.0261547 | 6.24546 | 58314 | [CAAP1](ensembl/rs111526775.md) |
| rs35198068 | 10 | 114754784 | T | C | 0.261312 | 0.0348854 | 0.00589411 | 8.48877 | 58314 | [TCF7L2](ensembl/rs35198068.md) |
| rs2168101 | 11 | 8255408 | C | A | 0.310093 | -0.0561856 | 0.0056633 | 22.4718 | 58314 | [LMO1](ensembl/rs2168101.md) |
| rs10830963 | 11 | 92708710 | C | G | 0.281835 | 0.055125 | 0.00583995 | 20.4256 | 58314 | [MTNR1B](ensembl/rs10830963.md) |
| rs1870019 | 11 | 100901473 | A | G | 0.34274 | 0.0266408 | 0.00542731 | 6.03762 | 58314 | [PGR](ensembl/rs1870019.md) |
| rs7310615 | 12 | 111865049 | C | G | 0.548951 | 0.0391228 | 0.00520132 | 13.267 | 58314 | [SH2B3](ensembl/rs7310615.md) |
| rs79295634 | 12 | 47180008 | A | G | 0.0632976 | 0.0773228 | 0.0106943 | 12.3169 | 58314 | [SLC38A4](ensembl/rs79295634.md) |
| rs17630235 | 12 | 112591686 | G | A | 0.376688 | -0.0295821 | 0.00532161 | 7.56619 | 58314 | [TRAFD1](ensembl/rs17630235.md) |
| rs7339001 | 13 | 108128848 | T | A | 0.519941 | -0.0299518 | 0.00516819 | 8.1665 | 58314 | [FAM155A](ensembl/rs7339001.md) |
| rs73154241 | 13 | 23089113 | G | T | 0.0480038 | -0.0599326 | 0.0121991 | 6.047 | 58314 | No gene found |
| rs3759526 | 14 | 51292535 | C | T | 0.0826628 | 0.0500196 | 0.00938081 | 7.01289 | 58314 | [NIN](ensembl/rs3759526.md) |
| rs2071410 | 15 | 91420940 | C | G | 0.319564 | -0.0316111 | 0.00560506 | 7.76879 | 58314 | [FURIN](ensembl/rs2071410.md) |
| rs2667376 | 15 | 83528843 | T | C | 0.691245 | 0.0281073 | 0.00560929 | 6.26608 | 58314 | [HOMER2](ensembl/rs2667376.md) |
| rs35106244 | 19 | 49203829 | C | T | 0.419532 | -0.030775 | 0.00538512 | 7.95933 | 58314 | [FUT2](ensembl/rs35106244.md) |
| rs2918299 | 19 | 8787273 | C | T | 0.155708 | -0.0357047 | 0.00711794 | 6.27808 | 58314 | [ACTL9](ensembl/rs2918299.md) |
### Top hits rare
| SNP | chr | bp | allele 0 | allele 1 | allele 1 freq | beta | se | log10p | n | gene |
| --- | --- | -- | -------- | -------- | ------------- | ---- | -- | ------ | - | ---- |
| rs140387300 | 2 | 169679595 | T | G | 0.00110292 | 0.469951 | 0.0900529 | 6.74408 | 58314 | [NOSTRIN](ensembl/rs140387300.md) |
| rs16848114 | 2 | 213122138 | A | C | 0.00702566 | 0.174513 | 0.0336049 | 6.68439 | 58314 | [ERBB4](ensembl/rs16848114.md) |
| rs73993899 | 2 | 225336769 | C | T | 0.00266942 | 0.247623 | 0.0502894 | 6.07156 | 58314 | [CUL3](ensembl/rs73993899.md) |
| rs12648333 | 4 | 130491944 | T | C | 0.00127871 | 0.474613 | 0.0766251 | 9.23156 | 58314 | No gene found |
| rs55705732 | 4 | 57121857 | C | G | 0.0085967 | 0.152314 | 0.0274033 | 7.56463 | 58314 | [KIAA1211](ensembl/rs55705732.md) |
| rs78331365 | 4 | 138087197 | G | A | 0.0013818 | 0.386896 | 0.0701975 | 7.44889 | 58314 | No gene found |
| rs117252740 | 4 | 83178902 | T | A | 0.00153594 | 0.418352 | 0.0772376 | 7.2161 | 58314 | [HNRNPD](ensembl/rs117252740.md) |
| rs12644202 | 4 | 127968503 | T | G | 0.00311932 | 0.229509 | 0.0425701 | 7.15523 | 58314 | No gene found |
| rs79531584 | 4 | 971378 | C | T | 0.00133335 | 0.38275 | 0.0719725 | 6.97916 | 58314 | [DGKQ](ensembl/rs79531584.md) |
| rs12501178 | 4 | 139111138 | T | C | 0.00246714 | 0.282877 | 0.0538119 | 6.83388 | 58314 | [SLC7A11](ensembl/rs12501178.md) |
| rs17088231 | 4 | 58355502 | C | T | 0.00174179 | 0.326759 | 0.0621919 | 6.82741 | 58314 | No gene found |
| rs73073786 | 4 | 5751489 | C | T | 0.00137034 | 0.396227 | 0.0776321 | 6.47792 | 58314 | [EVC, CRMP1](ensembl/rs73073786.md) |
| rs10488883 | 4 | 110947882 | A | G | 0.00713248 | 0.146455 | 0.0288202 | 6.42699 | 58314 | [EGF](ensembl/rs10488883.md) |
| rs72936651 | 4 | 131101106 | C | T | 0.00233217 | 0.343465 | 0.0676927 | 6.40917 | 58314 | No gene found |
| rs59543589 | 4 | 167411975 | T | C | 0.0038716 | 0.183647 | 0.0363812 | 6.3499 | 58314 | [SPOCK3](ensembl/rs59543589.md) |
| rs7695568 | 4 | 4936959 | C | T | 0.00525946 | 0.175375 | 0.0349328 | 6.28751 | 58314 | [MSX1](ensembl/rs7695568.md) |
| rs77482484 | 4 | 37653711 | T | C | 0.00183637 | 0.305232 | 0.0615422 | 6.15123 | 58314 | [RELL1](ensembl/rs77482484.md) |
| rs56234649 | 17 | 28532039 | A | G | 0.00189044 | 0.36571 | 0.0714933 | 6.50414 | 58314 | [SLC6A4, RP11-354P11.4](ensembl/rs56234649.md) |
| rs75202678 | 17 | 27427231 | A | G | 0.00171822 | 0.349038 | 0.069402 | 6.30763 | 58314 | [MYO18A](ensembl/rs75202678.md) |
### HLA top hits
HLA region: chr 6, 27-34 Mb

| SNP | chr | bp | allele 0 | allele 1 | allele 1 freq | beta | se | p | n | gene |
| --- | --- | -- | -------- | -------- | ------------- | ---- | -- | - | - | ---- |
| rs9265190 | 6 | 31289640 | C | T | 0.128899 | 0.0396632 | 0.00787524 | 6.32398 | 58314 | [HLA-B](ensembl/rs9265190.md) |
### Quality Control
- QQ plot
![](figures/pop_mothers_pheno_weight_birth_qq.png)
- Beta vs. Allele Frequency
![](figures/pop_mothers_pheno_weight_birth_beta_af.png)
- Standard error vs. Allele Frequency
![](figures/pop_mothers_pheno_weight_birth_se_af.png)
